# ladex

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
src/: coordinator.rs  handlers.rs  main.rs  models.rs  types.rs  websocket.rs
static/: app.js  index.html  login.html  style.css
static/libs/: simple-peer.min.js
