[package]
name = "ladex"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
futures-util = "0.3"
