[package]
name = "ladex"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = { version = "0.4.1", features = ["websocket", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
futures-util = "0.3"
include_dir = "0.7"
mime_guess = "2.0"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
